fix: switch align

--- a/themes/default/components/widget/_switch.scss
+++ b/themes/default/components/widget/_switch.scss
@@ -14,6 +14,7 @@
   text-transform: uppercase;
   background-color: var(--switch-bg-color);
   color: var(--switch-active-bg-color);
+  margin-bottom: 0.4em;
 
   &__on,
   &__off {
